force-app/main/default/objects/Log_Table__c/Log_Table__c.object-meta.xml
<CustomObject>
    <description>For Task:
Log time Feature - Project Task

https://fusionconsultinginc.lightning.force.com/lightning/r/MPM4_BASE__Milestone1_Task__c/a0f3k00000UvEeAAAV/view</description>
    <label>Log Table</label>
    <nameField>
        <displayFormat>Log Time - {000000}</displayFormat>
        <label>Log Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>