force-app/main/default/objects/Log_Table__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Task</label>
    <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
    <relationshipName>log_tables</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>