force-app/main/default/objects/Log_Table__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <inlineHelpText>in Hours</inlineHelpText>
    <label>Time Spent</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>